# MyPlayer

./: .gitignore  CMakeLists.txt  main.cpp
include/: Decoder.h  Demuxer.h  EventHandler.h  MainWindow.h  MediaInfo.h  MediaParser.h  Parser.h  PktQueue.h  PlayController.h  Queue.h  Renderer.h  State.h  def.h
open_source/ffmpeg/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
open_source/sdl2/include/SDL2/: SDL_assert.h  SDL_config.h  SDL_hints.h  SDL_keyboard.h  SDL_mouse.h  SDL_scancode.h  SDL_video.h
script/: local_install.bat
test/suite/: QueueTest.cpp
ui/: MainWindow.ui  PlayGround.cpp  PlayGround.h  ui.h
